deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kaiburr
  labels:
    name: kaiburr
    app: kaiburr-task2
    owner: aditya-r
